--- a/css/dinos.css
+++ b/css/dinos.css
@@ -1367,9 +1367,20 @@ nav {
     align-items: center;
     z-index: 1000;
     overflow: hidden; /* Impede rolagem do fundo */
+    
 }
 .modal img{
-   width: 50%;
+   width: 60%;
+   display: flew;
+   border-radius: 15px;
+   position: relative;
+text-align: center;
+align-items: center;
+margin: 0 auto;
+position: relative;
+text-align: center;
+align-items: center;
+margin-left: 20%;
 }
 
 
@@ -1384,14 +1395,14 @@ nav {
     box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.7); /* Sombra mais forte para destacar */
     position: relative;
     color: #fffa8c; /* Cor do texto clara */
-    font-family: 'Arial', sans-serif; /* Fonte simples e legível */
+font-size: 24px;
 }
 
 .modal-content h2 {
     text-align: center;
-    color: #fcec10; /* Destaque no título */
+    color: #f3a006; /* Destaque no título */
     margin-bottom: 15px;
-    font-size: 24px;
+    font-size: 2.3rem;
 }
 
 .close-button {
@@ -1425,7 +1436,235 @@ nav {
     background-color: #e00458; /* Rosa forte */
     transform: scale(1.05); /* Efeito de leve zoom */
 }
+.dino-title{
 
+text-align: center;
+font-size: 2rem;
+text-shadow:
+      0 0 5px #ff0000,   /* Primeira camada de brilho vermelho */
+      0 0 10px #ff4500,  /* Segunda camada laranja */
+      0 0 20px #ff4500,  /* Terceira camada mais forte */
+      0 0 40px #ff6347,  /* Camada de brilho maior */
+      0 0 80px #ff4500;  /* Brilho externo */
+
+}
+.container-atributos{
+
+  text-align: center;
+
+}
+
+.Atri p{
+    justify-content: center;    /* Alinha os itens no centro horizontalmente */
+    align-items: center;        /* Alinha os itens no centro verticalmente */
+    text-align: center;         /* Alinha o texto dentro de cada item, caso seja necessário */
+font-size: 2.3rem;
+margin: 0;    /* Remove a margem (espaçamento externo) */
+padding: 0;   /* Remove o padding (espaçamento interno) */
+color: #f7b62b;
+}
+
+.Status {
+    display: flex;              /* Ativa o Flexbox */
+    justify-content: center;    /* Alinha os itens no centro horizontalmente */
+    align-items: center;        /* Alinha os itens no centro verticalmente */
+    text-align: center;         /* Alinha o texto dentro de cada item, caso seja necessário */
+    gap: 8px;
+   
+}
+.Status2 {
+    display: flex;              /* Ativa o Flexbox */
+    justify-content: center;    /* Alinha os itens no centro horizontalmente */
+    align-items: center;        /* Alinha os itens no centro verticalmente */
+    text-align: center;         /* Alinha o texto dentro de cada item, caso seja necessário */
+    gap: 8px;
+   
+    
+}
+.vida{
+color:#13e040;
+
+}
+.Armor{
+    color:#5e81f5;
+    
+}
+
+.bonus{
+    color:#fd7f18;   
+    
+}
+
+.vida,.armor,.bonus{
+    justify-content: center;    /* Alinha os itens no centro horizontalmente */
+    align-items: center;        /* Alinha os itens no centro verticalmente */
+    text-align: center;         /* Alinha o texto dentro de cada item, caso seja necessário */
+
+}
+
+.ataques{
+
+    margin-left:32%;
+
+}
+.ataques2{
+    margin:0 auto;
+    text-align: center;
+    margin-left: -46%;
+    font-size: 2.3rem;
+    color: #f7b62b;
+}
+.habi{
+    text-align: center;         /* Alinha o texto dentro de cada item, caso seja necessário */
+    font-size: 2.3rem;
+color: #f7b62b;
+}
+#dinoHab1{
+    margin-bottom: 3%;
+}
+#dinoHab2{
+    margin-bottom: 5%;
+}
+
+.caixa-passiva{
+
+    text-align: center;
+    border: 2px solid transparent; /* Largura da borda */
+    background: linear-gradient(to bottom, #fde40550, #16eead33, #5615ee33); /* Gradiente */
+    background-clip: padding-box; /* Faz o gradiente preencher o fundo */
+    box-shadow: 0 0 0 2px linear-gradient(to right, #fde405, #f5e509); /* Adiciona o gradiente nas bordas */
+    border-radius: 10%;
+    padding: 5px;
+}
+.passi{
+    padding: 5px;
+    margin-bottom: 5%;
+    font-size: 1.4rem;
+    text-align: center;
+    text-shadow:
+    0 0 10px #f78c12,
+    0 0 20px #f39c4a
+ 
+
+}
+.passi2{
+
+    padding: 5px;
+       font-size: 1.4rem;
+       text-align: center;
+       text-shadow:
+      0 0 10px #4c03c0,
+      0 0 20px #3201bb
+      
+   }
+   @media (max-width: 1080px) {
+    .modal-content {
+        width: 90%; /* Aumenta a largura para telas pequenas */
+        padding: 20px; /* Reduz o espaçamento interno */
+        max-height: 80%; /* Ajusta a altura máxima */
+        font-size: 18px; /* Diminui o tamanho do texto */
+    }
+
+    .modal img {
+        width: 60%;
+     display: flew;
+     border-radius: 15px;
+     position: relative;
+     text-align: center;
+     align-items: center;
+     margin: 0 auto;
+      position: relative;
+     text-align: center;
+     align-items: center;
+     margin-left: 20%;
+    }
+
+    .dino-title {
+        font-size: 1.8rem; /* Diminui o tamanho do título */
+    }
+
+    .container-atributos {
+        text-align: center;
+        font-size: 1.5rem; /* Reduz o tamanho dos textos */
+    }
+
+    .Atri p {
+        font-size: 1.5rem;
+    }
+    .vida{
+
+     margin-top: 10%;
+
+    }
+
+    .Armor{
+        justify-content: center;    /* Alinha os itens no centro horizontalmente */
+        align-items: center;        /* Alinha os itens no centro verticalmente */
+        text-align: center;         /* Alinha o texto dentro de cada item, caso seja necessário */
+     font-size: 1.3rem;
+       
+
+    }
+    .bonus{
+
+     margin-bottom: 10%;  
+
+    }
+    .vida,.armor,.bonus{
+        justify-content: center;    /* Alinha os itens no centro horizontalmente */
+        align-items: center;        /* Alinha os itens no centro verticalmente */
+        text-align: center;         /* Alinha o texto dentro de cada item, caso seja necessário */
+    font-size: 1.3rem;
+        margin: 0;
+    
+    }
+    .Status, .Status2 {
+        flex-direction: column; /* Organiza os itens em coluna */
+        gap: 5px; /* Reduz o espaçamento entre os itens */
+    }
+
+    .ataques {
+        margin-left: 0; /* Remove o deslocamento lateral */
+        text-align: center; /* Centraliza os textos */
+    }
+
+    .ataques2 {
+        margin: 10px auto; /* Centraliza */
+        font-size: 1.8rem; /* Diminui o tamanho do texto */
+    }
+
+    .habi {
+        font-size: 1.8rem; /* Reduz tamanho da fonte */
+    }
+
+    #dinoHab1, #dinoHab2 {
+        margin-bottom: 3%;
+    }
+
+    .caixa-passiva {
+        text-align: center;
+    }
+
+    .passi {
+        font-size: 1.3rem;
+    }
+
+    .passi2 {
+        font-size: 1.3rem;
+    }
+
+    .back-button {
+        font-size: 14px; /* Reduz o tamanho do botão */
+        padding: 10px 20px; /* Ajusta o espaçamento interno */
+    }
+
+    .close-button {
+        font-size: 22px; /* Reduz o tamanho do botão de fechar */
+        top: 10px;
+        right: 15px;
+
+    }
+}
 /* Geral do footer ------------------------------------------------------------------------------*/
 /* Estilo Geral do Footer */
 footer {
